<resources>
    <string name="app_name">CoCPlayerCharacterManager</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="about1">
        CoC的同好们，你们好，我是Kiyohara。我是个CoC跑团爱好者，算不上资深玩家，Android也是刚开始学而已，这么简陋的一个APP，我花了两个月才做出来，简直是蔡徐坤妈妈给蔡徐坤开门——蔡到家了。
    </string>
    <string name="about2">
        所以我其实对这个APP是不抱什么期待的，肯定有大神做出了功能更强大、界面更美观、bug更少的同类型软件......这么一想感觉更悲观了，这段话不会根本没人看得到吧？
    </string>
    <string name="about3">
        废话不多说，如果在使用本应用时遇到问题，请先查看下方的FAQ，如果还是无法解决，请反馈给我。
    </string>
    <string name="qq">
        QQ:406837089
    </string>
    <string name="email">
        邮箱:xqyalphadoggo@gmail.com
    </string>
</resources>