<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/black">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="关于此应用"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/about_actionBar_iv_cancel"
            android:layout_width="36dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_arrow_back" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/about1"
                android:textColor="@color/btn"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/about2"
                android:textColor="@color/btn"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/about3"
                android:textColor="@color/btn"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/qq"
                android:textColor="@color/btn"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textColor="@color/btn"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif"
                android:text="FAQ"
                android:textColor="@color/btn"
                android:textSize="30sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="20dp"
                android:background="@color/btn" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:text="Q:骰子娘在哪里？"
                android:textColor="@color/btn"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="5dp"
                android:text="A:先创建一个调查员，然后点击调查员进入详情页，右上角的菜单中就可以呼唤骰娘了。"
                android:textColor="@color/btn"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:text="Q:技能列表里好像少了一些技能？"
                android:textColor="@color/btn"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="5dp"
                android:text="A:一些非常规的技能列表中没有收录。在调查员详情页右上角的菜单中有创建自定义技能的选项，请依据规则书来创建。如果是规则书里没有的技能，请先与KP达成一致后再创建。"
                android:textColor="@color/btn"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:text="Q:我要怎么把卡展示给别人？"
                android:textColor="@color/btn"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="5dp"
                android:text="A:在调查员详情页的右上角菜单中，有分享功能，目前只支持纯文本形式的分享，后续可能添加其他方式。"
                android:textColor="@color/btn"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:text="Q:收藏功能有什么用？"
                android:textColor="@color/btn"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="5dp"
                android:text="A:保护调查员不被误删。"
                android:textColor="@color/btn"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:text="Q:不需要的调查员要怎么删除？"
                android:textColor="@color/btn"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="5dp"
                android:text="A:在主界面的列表中长按要删除的调查员，就会出现确认删除的对话框。注意！被删除的调查员无法恢复！使用收藏功能保护你的调查员。"
                android:textColor="@color/btn"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:text="Q:纯萌新，有没有CoC的跑团群组推荐？"
                android:textColor="@color/btn"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="60dp"
                android:text="A:因为一些个人原因，我也蛮久没正式跑过团了，建议去搜一搜资深玩家们的视频，或者去跑团相关的论坛等地方找一找吧。"
                android:textColor="@color/btn"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>